[package]
name = "cardanobi-rust"
version = "0.1.0"
edition = "2021"
keywords = ["cardanobi", "business", "intelligence", "blockchain", "cardano", "core", "bi"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies"]
description = "Rust SDK for the CardanoBI API"
license = "Apache-2.0"
repository = "https://github.com/cardanobi/cardanobi-rust"
homepage = "https://cardanobi.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.0"
colored = "2.1.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tokio = { version = "1.37.0", features = ["sync", "rt-multi-thread"] }


[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
